Travel::Status::DE::IRIS 1.13 - Thu Jan 26 2017

    * Fix support for line numbers, remove manual line map workaround

Travel::Status::DE::IRIS 1.12 - Fri Dec 30 2016

    * Unfortunately, line numbers are not available at the moment due to IRIS
      backend changes. Some lines in NRW have been provided with a manual line
      number mapping to remedy this.
    * Fix DS100 code for "Bielefeld Hbf"
    * Travel::Status::DE::IRIS::Stations::get_station_by_location: Fix bug in
      num_matches (parameter was silently ignored)

Travel::Status::DE::IRIS 1.11 - Tue Oct 11 2016

    * IRIS->new: Fix partially broken cache handling when using
      "with_related => 1"
    * Improve parser performance

Travel::Status::DE::IRIS 1.10 - Sat Oct 01 2016

    * Add qos code 71 ("WLAN in einzelnen Wagen nicht verfügbar")
    * Fix DS100 codes for "Geilenkirchen" and "Montabaur"
    * Travel::Status::DE::IRIS::Stations::get_station: Add support for
      UIC / EVA numbers

Travel::Status::DE::IRIS 1.09 - Mon Jun 27 2016

    * Travel::Status::DE::IRIS::Result: Fix ->classes accessor
      (returned a string instead of a list)
    * Fix DS100 codes for "Stuttgart Hbf (tief)" and "Stuttgart-Feuerbach"


Travel::Status::DE::IRIS 1.08 - Thu Jun 09 2016

    * New dependency: Geo::Distance
    * Update DS100 code list. Station names are now unabbreviated, e.g.
      "Dortmund Univeristät" instead of "Do Universität". Also, stations
      without train service are no longer included. Note that this list might
      contain errors. If you get "Request error: Station ... has no associated
      timetable" for a station which worked with previous versions, please
      submit a bug report.
    * Travel::Status::DE::IRIS::Stations now also returns international
      station number, longitude and latitutde for most stations
    * New method Travel::Status::DE::IRIS::Stations::get_station_by_location
      allows station lookup by geolocation
