@@ -1,3 +1,7 @@
+git HEAD
+
+    * IRIS->new: Add optional argument lookbehind
+
 Travel::Status::DE::IRIS 1.13 - Thu Jan 26 2017
 
     * Fix support for line numbers, remove manual line map workaround
